--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
+    "@rollup/plugin-replace": "^2.3.3",
     "rollup": "^2.18.1",
     "rollup-plugin-inject-process-env": "^1.3.0",
     "rollup-plugin-livereload": "^1.0.0",
