--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-/node_modules/
-/public/build/
-
-.DS_Store
+node_modules
+.now
+build
+package-lock.json
+src/shared/data
+# Local Netlify folder
+.netlify
