--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "fix": "npx eslint --fix \"src/**/*.svelte\" \"src/**/*.js\"",
     "test": "npm run lint && jest src",
     "build": "rollup -c",
-    "autobuild": "npm run build -- -w",
+    "autobuild": "rollup -c -w",
     "serve": "sirv build --dev",
     "dev": "npm run autobuild"
   },
@@ -20,14 +20,14 @@
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "@rollup/plugin-alias": "^3.1.0",
-    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-json": "^4.0.2",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/plugin-replace": "^2.3.3",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/svelte": "^3.0.0",
     "@tivac/eslint-config": "^2.4.0",
-    "autoprefixer": "^9.7.6",
+    "autoprefixer": "^9.8.5",
     "babel-jest": "^25.3.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^6.8.0",
@@ -35,7 +35,7 @@
     "eslint-plugin-svelte3": "^2.7.3",
     "jest": "^25.3.0",
     "jest-transform-svelte": "^2.1.1",
-    "rollup": "^2.6.1",
+    "rollup": "^2.21.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-inject-process-env": "^1.2.0",
@@ -43,7 +43,7 @@
     "rollup-plugin-sass": "^1.2.2",
     "rollup-plugin-svelte": "^5.2.1",
     "sirv-cli": "^0.4.5",
-    "svelte": "^3.20.1",
+    "svelte": "^3.24.0",
     "svelte-preprocess": "^3.9.9",
     "svelte-preprocess-sass": "^0.2.0"
   },
@@ -51,7 +51,8 @@
     "@babel/plugin-transform-regenerator": "^7.8.7",
     "@babel/polyfill": "^7.8.7",
     "@babel/runtime": "^7.9.2",
-    "xstate": "^4.10.0",
-    "xstate-component-tree": "^3.0.0"
+    "xcr": "0.0.1",
+    "xcr-svelte": "0.0.2",
+    "xstate": "^4.11.0"
   }
 }
